care/force-app/main/default/objects/Action_Plan_Needs__c/Action_Plan_Needs__c.object-meta.xml
<CustomObject>
    <description>Senior Care Case Action Plan</description>
    <label>Action Plan Need</label>
    <nameField>
        <label>Action Plan Needs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Plan Needs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>