care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Account_name__c.field-meta.xml
<CustomField>
    <fullName>Account_name__c</fullName>
    <formula>Case__r.Contact.FirstName &amp;&quot; &quot;&amp; Case__r.Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>