care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Action_Plan_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Completed_Date__c</fullName>
    <label>Action Plan Completed Date</label>
    <type>Date</type>
</CustomField>