care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Action_Plan_Created_date__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Created_date__c</fullName>
    <label>Action Plan Created date</label>
    <type>Date</type>
</CustomField>