care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Action_Plan_entered_after_5_00pm__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_entered_after_5_00pm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For SC team to check if a request comes in after business hours.</description>
    <label>Action Plan entered after 5:00pm</label>
    <type>Checkbox</type>
</CustomField>