care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Action_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Type__c</fullName>
    <description>Field to identify the action plan type used by Senior Care Team.</description>
    <inlineHelpText>Please Select the Action Plan Type</inlineHelpText>
    <label>Action Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Life Plan Community</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>