care/force-app/main/default/objects/Action_Plan_Needs__c/fields/ADLs_needed__c.field-meta.xml
<CustomField>
    <fullName>ADLs_needed__c</fullName>
    <label>ADLs needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ambulation</fullName>
            </value>
            <value>
                <fullName>Dressing</fullName>
            </value>
            <value>
                <fullName>Bathing</fullName>
            </value>
            <value>
                <fullName>Toileting</fullName>
            </value>
            <value>
                <fullName>Transfers</fullName>
            </value>
            <value>
                <fullName>Feeding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>