care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Any_facilities_under_consideration__c.field-meta.xml
<CustomField>
    <fullName>Any_facilities_under_consideration__c</fullName>
    <label>Providers Already Considered</label>
    <length>2456</length>
    <type>LongTextArea</type>
</CustomField>