care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Assistance_with_transfers__c.field-meta.xml
<CustomField>
    <fullName>Assistance_with_transfers__c</fullName>
    <label>Assistance with transfers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not applicable - independent</fullName>
            </value>
            <value>
                <fullName>1-person assist</fullName>
            </value>
            <value>
                <fullName>2 -person assist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>