care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Assistive_devices_required__c.field-meta.xml
<CustomField>
    <fullName>Assistive_devices_required__c</fullName>
    <label>Assistive devices required?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>