care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Belong_to_a_Healthcare_Organization__c.field-meta.xml
<CustomField>
    <fullName>Belong_to_a_Healthcare_Organization__c</fullName>
    <description>SFORCE-2796
Create new Action Plan Need record type for Senior Care Planning &quot;Care Tasks&quot;.</description>
    <inlineHelpText>Indicate whether care recipient belongs to a healthcare organization and provide details of healthcare organization.</inlineHelpText>
    <label>Belong to a Healthcare Organization?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>