care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <length>100</length>
    <type>Text</type>
</CustomField>