care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Can_we_share_information_with_providers__c.field-meta.xml
<CustomField>
    <fullName>Can_we_share_information_with_providers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can we share information with providers?</label>
    <type>Checkbox</type>
</CustomField>