care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Can_we_share_recipient_name_w_provider__c.field-meta.xml
<CustomField>
    <fullName>Can_we_share_recipient_name_w_provider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can we share recipient name w/ provider?</label>
    <type>Checkbox</type>
</CustomField>