care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Car_used_for_transportation_service__c.field-meta.xml
<CustomField>
    <fullName>Car_used_for_transportation_service__c</fullName>
    <label>Car used for transportation service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client&apos;s</fullName>
            </value>
            <value>
                <fullName>Caregiver&apos;s</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>