care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Care_recipient_2__c.field-meta.xml
<CustomField>
    <fullName>Care_recipient_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Care recipient 2</label>
    <type>Checkbox</type>
</CustomField>