care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Care_Recipt_willing_to_work_w_attorney__c.field-meta.xml
<CustomField>
    <fullName>Care_Recipt_willing_to_work_w_attorney__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Care Recipt. willing to work w/ attorney</label>
    <type>Checkbox</type>
</CustomField>