care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Standard Lookup Field for the related Case</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Action Plan Needs</relationshipLabel>
    <relationshipName>Action_Plan_Needs</relationshipName>
    <type>Lookup</type>
</CustomField>