care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Client_City__c.field-meta.xml
<CustomField>
    <fullName>Client_City__c</fullName>
    <label>Client City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>