care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <label>Client Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>