care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Client_Requests_Home_Visit__c.field-meta.xml
<CustomField>
    <fullName>Client_Requests_Home_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Requests Home Visit</label>
    <type>Checkbox</type>
</CustomField>