care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Client_requests_phone_consult_if_poss__c.field-meta.xml
<CustomField>
    <fullName>Client_requests_phone_consult_if_poss__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client requests phone consult if poss.</label>
    <type>Checkbox</type>
</CustomField>