care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Client_SLA_Met__c.field-meta.xml
<CustomField>
    <fullName>Client_SLA_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client SLA Met</label>
    <type>Checkbox</type>
</CustomField>