care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Client_Street__c.field-meta.xml
<CustomField>
    <fullName>Client_Street__c</fullName>
    <label>Client Street</label>
    <length>200</length>
    <type>Text</type>
</CustomField>