care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Client_Zip__c.field-meta.xml
<CustomField>
    <fullName>Client_Zip__c</fullName>
    <label>Client Zip</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>