care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Confirm_office_is_handicap_accessible__c.field-meta.xml
<CustomField>
    <fullName>Confirm_office_is_handicap_accessible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm office is handicap accessible</label>
    <type>Checkbox</type>
</CustomField>