care/force-app/main/default/objects/Action_Plan_Needs__c/fields/CT_Identified_Providers__c.field-meta.xml
<CustomField>
    <fullName>CT_Identified_Providers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CT Identified Providers</label>
    <type>Checkbox</type>
</CustomField>