care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Current_Provider_hospital_rehab_etc__c.field-meta.xml
<CustomField>
    <fullName>Current_Provider_hospital_rehab_etc__c</fullName>
    <inlineHelpText>Name of provider where care recipient is currently inpatient</inlineHelpText>
    <label>Current Provider (hospital,rehab etc)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>