care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>SFORCE-2796
Create new Action Plan Need record type for Senior Care Planning &quot;Care Tasks&quot;</description>
    <label>Date of Birth</label>
    <length>100</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>