care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Date_of_Initial_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Initial_Assessment__c</fullName>
    <label>Date of Initial Assessment</label>
    <type>Date</type>
</CustomField>