care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Date_to_begin_care__c.field-meta.xml
<CustomField>
    <fullName>Date_to_begin_care__c</fullName>
    <label>Date to begin care</label>
    <type>Date</type>
</CustomField>