care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Dementia_Disease_Specifications__c.field-meta.xml
<CustomField>
    <fullName>Dementia_Disease_Specifications__c</fullName>
    <label>Dementia &amp; Disease Specifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>