care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Describe_special_accomodations__c.field-meta.xml
<CustomField>
    <fullName>Describe_special_accomodations__c</fullName>
    <label>Describe special accomodations</label>
    <length>100</length>
    <type>Text</type>
</CustomField>