care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Desired_focus_of_group__c.field-meta.xml
<CustomField>
    <fullName>Desired_focus_of_group__c</fullName>
    <label>Desired focus of group</label>
    <type>TextArea</type>
</CustomField>