care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Dietary_requirements__c.field-meta.xml
<CustomField>
    <fullName>Dietary_requirements__c</fullName>
    <inlineHelpText>ex. diabetic, kosher</inlineHelpText>
    <label>Dietary requirements</label>
    <length>100</length>
    <type>Text</type>
</CustomField>