care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Does_client_live_near_public_transport__c.field-meta.xml
<CustomField>
    <fullName>Does_client_live_near_public_transport__c</fullName>
    <label>Does client live near public transport?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>