care/force-app/main/default/objects/Action_Plan_Needs__c/fields/DST__c.field-meta.xml
<CustomField>
    <fullName>DST__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Calculates the day is day light saving or not</description>
    <label>DST</label>
    <type>Checkbox</type>
</CustomField>