care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <formula>TEXT( Case__r.Employer__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employer</label>
    <type>Text</type>
</CustomField>