care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Enter_into_IL__c.field-meta.xml
<CustomField>
    <fullName>Enter_into_IL__c</fullName>
    <description>Enter into Independent Living, Yes or No Field Used by Senior Care Team.</description>
    <inlineHelpText>Please indicate Independent Living Yes or No.</inlineHelpText>
    <label>Enter into IL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>