care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Facility_Selection_Priorities__c.field-meta.xml
<CustomField>
    <fullName>Facility_Selection_Priorities__c</fullName>
    <label>Facility Selection Priorities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Dementia Care</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Other Services</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>