care/force-app/main/default/objects/Action_Plan_Needs__c/fields/GCM_Needs__c.field-meta.xml
<CustomField>
    <fullName>GCM_Needs__c</fullName>
    <label>ALCM Needs</label>
    <type>TextArea</type>
</CustomField>