care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Geographic_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Parameters__c</fullName>
    <label>Geographic Parameters</label>
    <length>100</length>
    <type>Text</type>
</CustomField>