care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Hands_on_assist_with_ADLs__c.field-meta.xml
<CustomField>
    <fullName>Hands_on_assist_with_ADLs__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to differentiate between cueing and hands-on assistance for care recipient.</inlineHelpText>
    <label>Hands-on assist with ADLs?</label>
    <type>Checkbox</type>
</CustomField>