care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Home_Mod_Services_Needed__c.field-meta.xml
<CustomField>
    <fullName>Home_Mod_Services_Needed__c</fullName>
    <label>Home Mod Services Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chair/stair lift - curved</fullName>
            </value>
            <value>
                <fullName>Chair/stair lift - straight</fullName>
            </value>
            <value>
                <fullName>Elevator/lifts</fullName>
            </value>
            <value>
                <fullName>Emergency response systems</fullName>
            </value>
            <value>
                <fullName>Grab bars/bathroom safety</fullName>
            </value>
            <value>
                <fullName>Safety tub/shower</fullName>
            </value>
            <value>
                <fullName>Wheelchair ramp</fullName>
            </value>
            <value>
                <fullName>Widen doorways</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>