care/force-app/main/default/objects/Action_Plan_Needs__c/fields/How_will_care_be_paid_for__c.field-meta.xml
<CustomField>
    <fullName>How_will_care_be_paid_for__c</fullName>
    <label>How will care be paid for?</label>
    <type>TextArea</type>
</CustomField>