care/force-app/main/default/objects/Action_Plan_Needs__c/fields/IADLs_needed__c.field-meta.xml
<CustomField>
    <fullName>IADLs_needed__c</fullName>
    <label>IADLs needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shopping</fullName>
            </value>
            <value>
                <fullName>Meal Preparation</fullName>
            </value>
            <value>
                <fullName>Medication Reminders</fullName>
            </value>
            <value>
                <fullName>Laundry</fullName>
            </value>
            <value>
                <fullName>Housecleaning</fullName>
            </value>
            <value>
                <fullName>Bill Paying</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Yard Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>