care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Insurance_Plan_Name_and_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Plan_Name_and_ID_Number__c</fullName>
    <description>SFORCE-2796
Create new Action Plan Need record type for Senior Care Planning &quot;Care Tasks&quot;</description>
    <inlineHelpText>Please enter the care recipient&apos;s insurance plan name and ID#</inlineHelpText>
    <label>Insurance Plan Name and ID Number</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>