care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Model_type__c.field-meta.xml
<CustomField>
    <fullName>Model_type__c</fullName>
    <label>Model type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>