care/force-app/main/default/objects/Action_Plan_Needs__c/fields/National_Page__c.field-meta.xml
<CustomField>
    <fullName>National_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>National Page</label>
    <type>Checkbox</type>
</CustomField>