care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Obstacles_to_Care__c.field-meta.xml
<CustomField>
    <fullName>Obstacles_to_Care__c</fullName>
    <label>Obstacles to Care</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>