care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Obstacles_to_working_with_GCM__c.field-meta.xml
<CustomField>
    <fullName>Obstacles_to_working_with_GCM__c</fullName>
    <label>Obstacles to working with ALCM</label>
    <type>TextArea</type>
</CustomField>