care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Other_Type_of_Care_Needed__c.field-meta.xml
<CustomField>
    <fullName>Other_Type_of_Care_Needed__c</fullName>
    <label>Other Type of Care Needed</label>
    <type>TextArea</type>
</CustomField>