care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Physician_Type__c.field-meta.xml
<CustomField>
    <fullName>Physician_Type__c</fullName>
    <description>SFORCE-2796
Create new Action Plan Need record type for Senior Care Planning &quot;Care Tasks&quot;</description>
    <label>Physician Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Care Physician</fullName>
            </value>
            <value>
                <fullName>Geriatrician</fullName>
            </value>
            <value>
                <fullName>Cardiologist</fullName>
            </value>
            <value>
                <fullName>Neurologist</fullName>
            </value>
            <value>
                <fullName>Psychiatrist</fullName>
            </value>
            <value>
                <fullName>Dermatologist</fullName>
            </value>
            <value>
                <fullName>Opthamologist</fullName>
            </value>
            <value>
                <fullName>Oncologist</fullName>
            </value>
            <value>
                <fullName>Orthopedist</fullName>
            </value>
            <value>
                <fullName>Urologist</fullName>
            </value>
            <value>
                <fullName>Nephrologist</fullName>
            </value>
            <value>
                <fullName>Licensed Therapist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>