care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Preferred_Appointment_Day_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Appointment_Day_Time__c</fullName>
    <description>SFORCE-2796
Create new Action Plan Need record type for Senior Care Planning &quot;Care Tasks&quot;</description>
    <inlineHelpText>Preferences for appointment day and time?</inlineHelpText>
    <label>Preferred Appointment Day/Time</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>