care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Preferred_Hours_Frequency_of_Care_Needed__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Hours_Frequency_of_Care_Needed__c</fullName>
    <label>Preferred Hours/Frequency of Care Needed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>