care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Priorities__c.field-meta.xml
<CustomField>
    <fullName>Priorities__c</fullName>
    <label>Priorities</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>