care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <description>SFORCE-2796
Create new Action Plan Need record type for Senior Care Planning &quot;Care Tasks&quot;</description>
    <inlineHelpText>Please enter the provider name</inlineHelpText>
    <label>Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>