care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Provider_Phone__c.field-meta.xml
<CustomField>
    <fullName>Provider_Phone__c</fullName>
    <description>SFORCE-2796
Create new Action Plan Need record type for Senior Care Planning &quot;Care Tasks&quot;</description>
    <inlineHelpText>Please enter the provider phone number</inlineHelpText>
    <label>Provider Phone</label>
    <type>Phone</type>
</CustomField>