care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Provider_Preference__c.field-meta.xml
<CustomField>
    <fullName>Provider_Preference__c</fullName>
    <description>SFORCE-2796
Create new Action Plan Need record type for Senior Care Planning &quot;Care Tasks&quot;</description>
    <inlineHelpText>Are there any specific requests to look into (or stay away from) certain providers?</inlineHelpText>
    <label>Provider Preference?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>