care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Provider_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Provider_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Specialist</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>SCP + SCR (transitional)</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Action_Plan_Needs</relationshipName>
    <type>Lookup</type>
</CustomField>