care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Provider_Specialist_Notes__c.field-meta.xml
<CustomField>
    <fullName>Provider_Specialist_Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>