care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Recommendations__c</fullName>
    <label>Recommendations</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>