care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Religious_Cultural_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Religious_Cultural_Preferences__c</fullName>
    <label>Religious/Cultural Preferences</label>
    <type>TextArea</type>
</CustomField>