care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Resources_and_Fact_Sheets__c.field-meta.xml
<CustomField>
    <fullName>Resources_and_Fact_Sheets__c</fullName>
    <label>Resources and Fact Sheets</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>