care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Room_Preference__c.field-meta.xml
<CustomField>
    <fullName>Room_Preference__c</fullName>
    <label>Room Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Flexible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>